crates/linerule-core/tests/snapshots/snapshot_render__snapshot_horizontal_mask_on_offset_monitor.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: Horizontal mask on monitor with non-zero origin — bounds offset accordingly
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 1920
          y: 0
        width: 1920
        height: 526
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
  - geometry:
      Rect:
        origin:
          x: 1920
          y: 554
        width: 1920
        height: 526
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
