crates/linerule-core/tests/snapshots/snapshot_render__snapshot_horizontal_mask_with_max_thickness.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: Horizontal mask with MAX_PX slit thickness — panels shrink to half-monitor minus MAX_PX/2
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 0
          y: 0
        width: 1920
        height: 284
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
  - geometry:
      Rect:
        origin:
          x: 0
          y: 796
        width: 1920
        height: 284
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
