crates/linerule-core/tests/snapshots/snapshot_render__snapshot_mask_at_centre_fhd.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: Mask centred — top + bottom panels with default mask colour
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 0
          y: 0
        width: 1920
        height: 526
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
  - geometry:
      Rect:
        origin:
          x: 0
          y: 554
        width: 1920
        height: 526
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
