crates/linerule-core/tests/snapshots/snapshot_render__snapshot_off_at_centre.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: Off mode emits zero layers
expression: frame
---
layers: []
