crates/linerule-core/tests/snapshots/snapshot_render__snapshot_vertical_mask_at_centre_fhd.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: "Vertical mask centred — left + right panels with default mask colour, transparent vertical slit at cursor X (縦書き typoscope)"
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 0
          y: 0
        width: 946
        height: 1080
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
  - geometry:
      Rect:
        origin:
          x: 974
          y: 0
        width: 946
        height: 1080
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
