crates/linerule-core/tests/snapshots/snapshot_render__snapshot_vertical_mask_at_left_edge.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: VerticalMask near left edge — left panel collapses to ~0 width
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 0
          y: 0
        width: 0
        height: 1080
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
  - geometry:
      Rect:
        origin:
          x: 14
          y: 0
        width: 1906
        height: 1080
    brush:
      Solid:
        r: 8
        g: 8
        b: 8
        a: 217
